# trustLeaf

./: .gitattributes  .gitignore  README.md  package.json  pnpm-workspace.yaml
backend/: .env.example  package.json
backend/src/: index.ts
backend/src/contracts/: routes.ts
backend/src/fee-bumper/: feeBumper.ts  routes.ts
backend/src/firestore/: batches.ts  client.ts  profiles.ts  routes.ts
backend/src/zk/: commitmentUtils.ts  proofGenerator.ts  routes.ts
circuits/: Nargo.toml
circuits/blind_prescription/: Nargo.toml
circuits/blind_prescription/src/: main.nr  utils.nr
circuits/scripts/: compile.sh  generate_vk.sh  test_proof.sh
contracts/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/shared/src/: types.rs
contracts/trust_leaf_rbac/: Cargo.toml
contracts/trust_leaf_rbac/src/: errors.rs  lib.rs  roles.rs  storage.rs  test.rs
contracts/trust_leaf_traceability/: Cargo.toml
contracts/trust_leaf_traceability/src/: batch.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/trust_leaf_zk_medical/: Cargo.toml
contracts/trust_leaf_zk_medical/src/: errors.rs  lib.rs  prescription.rs  storage.rs  test.rs  verifier.rs
docs/: SOROBAN_SETUP.md
frontend/: .env.local.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
indexer/: package.json
indexer/src/: config.ts  index.ts  subscriptions.ts  types.ts
scripts/: build-contracts.sh  deploy-contracts.sh  generate-bindings.sh  setup-testnet.sh
(+80 files in other folders)
